src/test/ui/borrowck/index-mut-help.stderr
error[E0596]: cannot borrow immutable indexed content as mutable
  --> $DIR/index-mut-help.rs:11:5
   |
LL |     map["peter"].clear();
   |     ^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `std::collections::HashMap<&str, std::string::String>`

error[E0594]: cannot assign to immutable indexed content
  --> $DIR/index-mut-help.rs:12:5
   |
LL |     map["peter"] = "0".to_string();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `std::collections::HashMap<&str, std::string::String>`

error[E0596]: cannot borrow immutable indexed content as mutable
  --> $DIR/index-mut-help.rs:13:18
   |
LL |     let _ = &mut map["peter"];
   |                  ^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `std::collections::HashMap<&str, std::string::String>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0596`.
